--- a/src/index.html
+++ b/src/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Plot your mood</title>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Plot your smood</title>
+    <!-- Styling -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
+    />
+    <link rel="stylesheet" href="index.css" />
 
-  <!-- Styling -->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap">
-	<link rel="stylesheet" href="index.css"/>
+    <!-- Libraries -->
+    <script src="../vendor/p5.min.js"></script>
+    <script src="../vendor/p5.dom.min.js"></script>
 
-  <!-- Libraries -->
-  <script src="../vendor/p5.min.js"></script>
-  <script src="../vendor/p5.dom.min.js"></script>
+    <!-- Application -->
+    <script src="input.js"></script>
+    <!-- <script src="output.js"></script> -->
+  </head>
 
-  <!-- Application -->
-  <script src="index.js"></script>
-</head>
-
-<body>
-  <header>
-    <h1>Plot your mood</h1>
-  </header>
-  <main id="main"></main>
-</body>
-
+  <body>
+    <header>
+      <h1>Plot your mood</h1>
+    </header>
+    <main>
+      <section id="input" style="display: block"></section>
+      <section id="output" style="display: none"></section>
+    </main>
+  </body>
 </html>
