Create two pages

--- a/src/drawing.html
+++ b/src/drawing.html
@@ -19,8 +19,8 @@
 
     <!-- Application -->
     <script src="constants.js"></script>
-    <script src="inputValues.js"></script>
-    <script src="index.js"></script>
+    <script src="getValues.js"></script>
+    <script src="drawing.js"></script>
   </head>
 
   <body>
@@ -32,7 +32,7 @@
         <div id="sketch" class="canvasContainer"></div>
       </div>
       <div class="row">
-        <button class="btn" onclick="onSubmit()">Submit</a>
+        <button class="btn" onclick="onBack();">Back</a>
       </div>
     </main>
   </body>
