Add p5 via yarn

--- a/src/drawing.html
+++ b/src/drawing.html
@@ -14,11 +14,10 @@
     <link rel="stylesheet" href="index.css" />
 
     <!-- Libraries -->
-    <script src="../vendor/p5.min.js"></script>
-    <script src="../vendor/p5.dom.min.js"></script>
+    <script src="../node_modules/p5/lib/p5.min.js"></script>
 
     <!-- Application -->
-    <script src="constants.js"></script>
+    <script src="sharedConstants.js"></script>
     <script src="getValues.js"></script>
     <script src="drawing.js"></script>
   </head>
@@ -29,7 +28,7 @@
     </header>
     <main>
       <div class="row">
-        <div id="sketch" class="canvasContainer"></div>
+        <div id="sketch" class="sketch"></div>
       </div>
       <div class="row">
         <button class="btn" onclick="onBack();">Back</a>
