Finish low-fidelity wheel prototype

--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
     />
     <link rel="stylesheet" href="index.css" />
 
     <!-- Libraries -->
     <script src="../node_modules/p5/lib/p5.min.js"></script>
+    <script src="../vendor/p5.scribble.js"></script>
 
     <!-- Application -->
     <script src="inputValues.js"></script>
