Replace p5 package with CDN

--- a/src/drawing.html
+++ b/src/drawing.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="index.css" />
 
     <!-- Libraries -->
-    <script src="../node_modules/p5/lib/p5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
 
     <!-- Application -->
     <script src="getValues.js"></script>
