--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="index.css" />
 
     <!-- Libraries -->
-    <script src="../node_modules/p5/lib/p5.min.js"></script>
-    <script src="../vendor/p5.scribble.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
+    <!-- <script src="../vendor/p5.scribble.js"></script> -->
 
     <!-- Application -->
     <script src="inputValues.js"></script>
