--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
         <div id="sketch" class="sketch"></div>
       </div>
       <div class="row">
-        <button class="btn" onclick="onSubmit()">Submit</a>
+        <button class="btn" onclick="onSubmit()">Go</a>
       </div>
     </main>
   </body>
