--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
     />
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="wheel.css" />
 
     <!-- Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
